packages/react-components/src/components/Alert/Alert.module.scss
$base-class: 'alert';

.#{$base-class} {
  box-sizing: border-box;
  display: flex;
  position: relative;
  border-radius: var(--radius-3);
  padding: var(--spacing-5);
  width: 100%;
  overflow: hidden;
  word-break: break-word;

  &__icon {
    display: flex;
    align-items: flex-start;
    margin-right: var(--spacing-5);
  }

  &__content {
    display: flex;
    justify-content: space-between;
    width: 100%;

    &__text {
      margin-right: var(--spacing-8);
      max-width: 720px;
      color: var(--content-basic-primary);
    }

    &__cta {
      flex-shrink: 0;
      margin-right: var(--spacing-8);

      &__link {
        margin-left: var(--spacing-4);
      }
    }
  }

  &__close-icon {
    width: 20px;
    min-width: 20px;
    height: 20px;
  }

  &--small,
  &--medium {
    .#{$base-class}__content {
      flex-direction: column;

      &__text {
        margin-bottom: var(--spacing-3);
      }
    }
  }

  &--small {
    flex-direction: column;

    .#{$base-class}__icon {
      margin-bottom: var(--spacing-3);
    }

    .#{$base-class}__close-icon {
      position: absolute;
      top: var(--spacing-5);
      right: var(--spacing-5);
    }
  }

  &--info {
    background-color: var(--surface-accent-emphasis-low-info);
  }

  &--warning {
    background-color: var(--surface-accent-emphasis-low-warning);
  }

  &--success {
    background-color: var(--surface-accent-emphasis-low-positive);
  }

  &--error {
    background-color: var(--surface-accent-emphasis-low-negative);
  }
}

